# tp-201-key-value-database

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  go.mod  main.go  store.go  store_test.go
src/: in_memory_store.zig  kvs.rs  lib.rs  log_structured.zig  main.zig  result.rs  root.zig  server.zig  storage.rs  store.zig  utils.zig
src/storage/: engine.rs  in_memory_basic.rs  log_structured.rs  mod.rs  result.rs  storage.rs
test-data/: log.ndjson
tests/: tests.rs  tests_part_2.rs
