[package]
name = "kvs"
description = "key value store"
authors = ["Anderson Reyes reyesanderson428@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.11"
clap = { version = "4.3.1", features = ["derive", "cargo"] }
predicates = "3.0.3"
tempfile = "3.6.0"
walkdir = "2.3.3"
