[package]
name = "kvs"
description = "key value store"
authors = ["Anderson Reyes reyesanderson428@gmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
assert_cmd = "2.0.11"
clap = { version = "4.3.1", features = ["derive", "cargo"] }
predicates = "3.0.3"
tempfile = "3.6.0"
walkdir = "2.3.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.20"
thiserror = "1.0.51"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
